fixed margin spacing

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -1,6 +1,4 @@
 .home {
-	margin-left: 60px;
-	margin-right: 60px;
 	.project-container {
 		
 
