--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,9 +1,16 @@
 @import "variables.less";
 
 
+/*** HEADER ***/
 header {
 	background: @primary-color;
 	height: 60px;
+}
+.header-container {
+	margin-left: 60px;
+	margin-right: 60px;
+	overflow: hidden;
+	height: 100%;
 }
 
 .logo-container {
@@ -27,6 +34,8 @@ footer {
 .footer-container {
 	margin-left: 60px;
 	margin-right: 60px;
+	overflow: hidden;
+	height: 100%;
 }
 
 .navigation {
@@ -45,12 +54,17 @@ footer {
 }
 
 .no-padding {
-	padding: none !important;
+	padding: 0 !important;
 }
 .no-margin {
-	margin: none !important;
+	margin: 0 !important;
 }
 
 #kc {
 	float: right;
+}
+
+.page {
+	margin-left: 60px;
+	margin-right: 60px;
 }
